syntax = "proto3";

package plugins.workflow.v1;

import "common/v1/plugin.proto";

option go_package = "github.com/superblocksteam/agent/types/gen/go/plugins/workflow/v1";

message Tuple {
  string key = 1;
  string value = 2;
}

message Plugin {
  string workflow = 1;
  map<string, common.v1.Property> custom = 2;
  map<string, common.v1.Property> queryParams = 3;
  common.v1.SuperblocksMetadata superblocksMetadata = 12;
}
